[gd_scene load_steps=18 format=2]

[ext_resource path="res://assets/objects/desk.png" type="Texture" id=1]
[ext_resource path="res://objects/base.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/drawers/4-closed.png" type="Texture" id=3]
[ext_resource path="res://assets/drawers/5-closed.png" type="Texture" id=4]
[ext_resource path="res://objects/drawer.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/drawers/3-closed.png" type="Texture" id=6]
[ext_resource path="res://assets/drawers/1-closed.png" type="Texture" id=7]
[ext_resource path="res://assets/drawers/2-closed.png" type="Texture" id=8]
[ext_resource path="res://assets/drawers/2-open.png" type="Texture" id=9]
[ext_resource path="res://assets/drawers/5-open.png" type="Texture" id=10]
[ext_resource path="res://assets/drawers/4-open.png" type="Texture" id=11]
[ext_resource path="res://assets/drawers/3-open.png" type="Texture" id=12]
[ext_resource path="res://assets/objects/cables.png" type="Texture" id=13]
[ext_resource path="res://assets/drawers/1-open.png" type="Texture" id=14]
[ext_resource path="res://scripts/dsi/drawers.gd" type="Script" id=15]
[ext_resource path="res://scripts/dsi/desk.gd" type="Script" id=16]
[ext_resource path="res://assets/objects/computer.png" type="Texture" id=17]

[node name="desk" instance=ExtResource( 2 )]
position = Vector2( 0, -0.529739 )
script = ExtResource( 16 )

[node name="drawers_back" type="Polygon2D" parent="." index="0"]
color = Color( 0.494118, 0.388235, 0.388235, 1 )
polygon = PoolVector2Array( 163.156, 93.8817, 21.4649, 97.2452, 25, -53.4703, -172, -54.4703, -176, -91.4703, 171.985, -91.1156 )

[node name="cables" type="Sprite" parent="." index="1"]
position = Vector2( -8.41342, -6.36131 )
scale = Vector2( 0.354774, 0.354774 )
texture = ExtResource( 13 )

[node name="drop_computer" type="Area2D" parent="." index="2"]
position = Vector2( -8.41342, -6.36131 )
scale = Vector2( 0.354774, 0.354774 )

[node name="collision" type="CollisionPolygon2D" parent="drop_computer" index="0"]
position = Vector2( 24.8335, 16.812 )
scale = Vector2( 2.8187, 2.8187 )
polygon = PoolVector2Array( -49.0601, -50.1941, 14.4359, -50.1941, 18.8013, 51.7964, -45.8853, 50.6059 )

[node name="sprite" type="Sprite" parent="." index="3"]
scale = Vector2( 0.4, 0.4 )
z_as_relative = false
texture = ExtResource( 1 )

[node name="collision" type="CollisionPolygon2D" parent="." index="4"]
position = Vector2( -70.8693, -35.3953 )
polygon = PoolVector2Array( -118.757, 130.958, -133.463, -58.639, 242.712, -59.6607, 233.348, 130.437, 92.5071, 132.31, 92.6949, 107.257, 87.0072, -15.8146, -101.412, -17.0437, -101.447, 131.568 )

[node name="qi_negatif" type="Sprite" parent="." index="5"]
visible = false
position = Vector2( -30.7036, 24.535 )
rotation = -0.00717245
scale = Vector2( 0.275, 0.275 )
texture = ExtResource( 17 )

[node name="drawers" type="Node2D" parent="." index="6"]
script = ExtResource( 15 )
codes_seq = [ 3, 2, 4, 5, 2, 3 ]

[node name="drawer1" parent="drawers" index="0" instance=ExtResource( 5 )]
position = Vector2( -79.7629, -68.1383 )
scale = Vector2( 1.17977, 1.17977 )
code = 1
pull_shift_down = 2
open_texture = ExtResource( 14 )

[node name="sprite" parent="drawers/drawer1" index="0"]
position = Vector2( -0.548096, 0.571716 )
texture = ExtResource( 7 )

[node name="collision" parent="drawers/drawer1" index="1"]
position = Vector2( -1.54926, 0.755135 )
polygon = PoolVector2Array( -64.9222, -9.71992, -61.6725, 9.77205, 66.0018, 11.5102, 61.4761, -10.2701 )

[node name="drawer2" parent="drawers" index="1" instance=ExtResource( 5 )]
position = Vector2( 94.0955, -55.2652 )
scale = Vector2( 0.986847, 0.986847 )
code = 2
pull_shift_down = 5
open_texture = ExtResource( 9 )

[node name="sprite" parent="drawers/drawer2" index="0"]
position = Vector2( 2.16496, -0.194499 )
scale = Vector2( 0.506058, 0.506058 )
texture = ExtResource( 8 )

[node name="collision" parent="drawers/drawer2" index="1"]
position = Vector2( 2.50786, -0.209862 )
polygon = PoolVector2Array( -64.9206, -18.6543, -53.0432, 19.0455, 63.7283, 18.0599, 64.0665, -16.4322 )

[node name="drawer3" parent="drawers" index="2" instance=ExtResource( 5 )]
position = Vector2( 96.7531, -11.0169 )
code = 3
pull_shift_down = 5
open_texture = ExtResource( 12 )

[node name="sprite" parent="drawers/drawer3" index="0"]
position = Vector2( 0.396851, 0 )
texture = ExtResource( 6 )

[node name="collision" parent="drawers/drawer3" index="1"]
position = Vector2( -0.667419, -0.292847 )
polygon = PoolVector2Array( -63.1526, 18.6971, -58.3904, -17.0194, 65.0433, -13.6593, 61.0388, 17.7095 )

[node name="drawer4" parent="drawers" index="3" instance=ExtResource( 5 )]
position = Vector2( 92.8657, 36.5673 )
scale = Vector2( 0.951769, 0.951769 )
code = 4
pull_shift_down = 2
open_texture = ExtResource( 11 )

[node name="sprite" parent="drawers/drawer4" index="0"]
texture = ExtResource( 3 )

[node name="collision" parent="drawers/drawer4" index="1"]
polygon = PoolVector2Array( -58.3577, 17.3905, -64.3183, -16.9703, 60.5027, -16.9703, 63.6583, 6.52131 )

[node name="drawer5" parent="drawers" index="4" instance=ExtResource( 5 )]
position = Vector2( 94.0168, 64.3252 )
code = 5
pull_shift_down = 5
open_texture = ExtResource( 10 )

[node name="sprite" parent="drawers/drawer5" index="0"]
position = Vector2( 0.396851, 0 )
texture = ExtResource( 4 )

[node name="collision" parent="drawers/drawer5" index="1"]
position = Vector2( 3.84311, 0.708282 )
polygon = PoolVector2Array( -65.8766, 16.451, -60.2036, -8.24356, 50.5881, -18.9223, 58.9309, 15.1161 )
[connection signal="area_entered" from="drop_computer" to="." method="_on_drop_computer_area_entered"]

[editable path="drawers/drawer1"]

[editable path="drawers/drawer2"]

[editable path="drawers/drawer3"]

[editable path="drawers/drawer4"]

[editable path="drawers/drawer5"]
